Bug 81502 - FILEOPEN: RTF: Square brackets appear in fields
Summary: FILEOPEN: RTF: Square brackets appear in fields
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.2 rc
Hardware: All All
: medium normal
Assignee: Michael Stahl (allotropia)
URL:
Whiteboard: BSA target:4.4.0 target:4.3.1
Keywords: bibisected, filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2014-07-18 16:16 UTC by Alexandr
Modified: 2015-12-17 05:53 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screenshot with the issue (57.66 KB, image/png)
2014-07-18 16:16 UTC, Alexandr
Details
minimal test case (146 bytes, application/rtf)
2014-07-24 21:41 UTC, Michael Stahl (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandr 2014-07-18 16:16:18 UTC
Created attachment 103051 [details]
screenshot with the issue

If I open bug 68715 attachment 84867 [details] in Libre Office 4.3.0.3 I see open square brackets “[” before some numbers in page 10 (see screenshot). In LibreOffice 4.2.5 and MS Word Viewer the brackets are not shown. The brackets are not exported to pdf, but they are visible even if nonprinting characters are invisible. 
Operating System: Debian
Version: 4.3.0.2 rc
Last worked in: 4.2.5.2 release
Comment 1 Jorendc 2014-07-18 16:56:46 UTC
Reproducible, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.3
Build ID: fcd3838c4097f7817b5b3984fd88a44e1edd8548

Also using Version: 4.4.0.0.alpha0+
Build ID: 7dd5f9308895644ae6ece56253c892046cc6ed5e
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-07-16_07:40:22

Kind regards,
Joren
Comment 2 Xisco Faulí 2014-07-23 14:23:02 UTC
bibisected:
 5874347fb1093d87d810e030af88327f0dc26a81 is the first bad commit
commit 5874347fb1093d87d810e030af88327f0dc26a81
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sun May 11 21:27:54 2014 +0000

    source-hash-a3f0803059cd22ddf8590db992183008dedd0fdb
    
    commit a3f0803059cd22ddf8590db992183008dedd0fdb
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Fri Mar 7 12:30:18 2014 +0000
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Fri Mar 7 16:26:43 2014 +0000
    
        coverity#704317 Logically dead code
    
        Change-Id: I680efdff5be6a9f699b8954c11eddc027f972a76

:100644 100644 9615ac297cba478c8427945e1e72af8819e010a1 fc3bf0ba6253e31cf371be3141f52562d090b3c9 M	ccache.log
:100644 100644 657b33625f1d46a715e9faf2ac3a9a9905894526 7dbe4647d6fbc4c6bd1f948771bfa83b374cbd9d M	commitmsg
:100644 100644 5ad0db5e43102ad725a18f5da3e377aba691c1e2 3e5f1638ca36ee1fa3414cec61fa06d03bd1efda M	make.log
:040000 040000 7ff89e6ec8bb4cec48819af360d7fae5f6beec0a 588120776e76c13d67623c35e8eb6e458591bd52 M	opt

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect good 4850941efe43ae800be5c76e1102ab80ac2c085d
# bad: [a900e72b6357882284c5955bdf939bf14269f5fb] source-hash-dd1050b182260a26a1d0ba6d0ef3a6fecc3f4e07
git bisect bad a900e72b6357882284c5955bdf939bf14269f5fb
# good: [e1d0365cd2b073a859f59ad0a4584385a66dc611] source-hash-2eea96c702a44ab009743b0d22ef639127f0b57b
git bisect good e1d0365cd2b073a859f59ad0a4584385a66dc611
# skip: [8f55938c891ee3e4c252b193dba9419f130537bc] source-hash-93f3f72d18e551c8edd6a010cb78d9cbe404f8ef
git bisect skip 8f55938c891ee3e4c252b193dba9419f130537bc
# good: [7518fcaf863962bf4f6f3cdf84f6e42f0f59225f] source-hash-ab1f5eab4830f00dbbd7c883b98b59975ecd3bb1
git bisect good 7518fcaf863962bf4f6f3cdf84f6e42f0f59225f
# good: [56a3b3c781fc2eb55f46641d89a866a91119a8a3] source-hash-21e6fd2b2dfdb806db320f699e434e6f2351a7b6
git bisect good 56a3b3c781fc2eb55f46641d89a866a91119a8a3
# bad: [0b79394752f7ecbab6ab4ecedbfab8551c6e9fbd] source-hash-381613916d42a1e18e2824b5d41028dcfe19659a
git bisect bad 0b79394752f7ecbab6ab4ecedbfab8551c6e9fbd
# bad: [5874347fb1093d87d810e030af88327f0dc26a81] source-hash-a3f0803059cd22ddf8590db992183008dedd0fdb
git bisect bad 5874347fb1093d87d810e030af88327f0dc26a81
# good: [a03a074d7d24b285022244e1939b1abbedc76d1e] source-hash-c84f0dae40b6f3e64a265efcc76b1757edbdbf45
git bisect good a03a074d7d24b285022244e1939b1abbedc76d1e
# first bad commit: [5874347fb1093d87d810e030af88327f0dc26a81] source-hash-a3f0803059cd22ddf8590db992183008dedd0fdb
Comment 3 Michael Stahl (allotropia) 2014-07-24 21:30:11 UTC
bibisect range: c84f0dae40b6f3e64a265efcc76b1757edbdbf45..a3f0803059cd22ddf8590db992183008dedd0fdb

commit c6b99eedda03461202f9bf012a422dfd81da72ec
Author:     sushil_shinde <sushil.shinde@synerzip.com>
AuthorDate: Fri Feb 28 15:33:10 2014 +0530
Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
CommitDate: Fri Mar 7 03:19:07 2014 -0600

    fdo#75158 : Handled unsupported fields for docx file.
    

... the problem is that the code to paint these field marks in writer
is, unsurprisingly, garbage... 

fixed on master.
Comment 4 Commit Notification 2014-07-24 21:30:54 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c3916303ebe63f9910cd2a4a38ac6a8d6ccee3e0

fdo#81502: sw: fix spurious "[" being painted for field marks



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Stahl (allotropia) 2014-07-24 21:41:23 UTC
Created attachment 103407 [details]
minimal test case

document with a single field in a paragraph with a tab
(funnily, Word 2010 cannot render it properly, going into infinite loop...)
Comment 6 Commit Notification 2014-07-25 08:10:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4d1a2b16e2421e93f2a0de6632607e69e6fbb2a2&h=libreoffice-4-3

fdo#81502: sw: fix spurious "[" being painted for field marks


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Alexandr 2014-07-30 09:29:35 UTC
Not reproducible with  LibreOffice 4.4.0.0.alpha0+ Build ID: 8cb75e905cef50a2d8a423443d3dcef5f1899027 TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-07-30_04:47:13

Thank you, Michael.
Comment 8 Robinson Tryon (qubit) 2015-12-17 05:53:55 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf, bibisected)
[NinjaEdit]