fdo#81502: sw: fix spurious "[" being painted for field marks

There is a special SwFieldMarkPortion sub-class that is supposed to be
created for these, which overrides Paint() to do nothing; unfortunately
at least for the CH_TXT_ATR_FIELDSTART at beginning of a paragraph
a plain SwTxtPortion is created, because the check of rInf.Len() is
checking the length of the _previous_ text portion; the call to
rInf.SetLen() only happens after creation, in last line of
SwTxtFormatter::NewTxtPortion().

This problem affects RTF and DOCX files since commit
c6b99eedda03461202f9bf012a422dfd81da72ec.

Change-Id: I447b21e841d22558d689f0f244d811c32e4923ec